Fixat z-index av bilderna på profil sidan

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,6 +63,7 @@ body {
     display: flex;
     align-items: center;
     box-shadow: 0px 1px 3px 0px #000000;
+    z-index: 1;
 }
 
 #nav_pointer a{
